--- a/relatorio/projeto_modelos.tex
+++ b/relatorio/projeto_modelos.tex
@@ -53,13 +53,13 @@
 \input{structure.tex}
 \title{	
 	\normalfont\normalsize
-	\textsc{ISCTE-IUL \\ Licenciatura de Ciência de Dados}\\
+	\textsc{ISCTE-IUL \\ Licenciatura em Ciência de Dados}\\
 	\vspace{20pt} 
 	\rule{\linewidth}{0.5pt}\\
 	\vspace{20pt}
-	{\huge Previsão dos preços de alojamentos airbnb de São Francisco}\\ 
+	{\huge Previsão dos preços de alojamentos Airbnb de São Francisco}\\ 
   \vspace{16pt} 
-  {\large Trabalho realizado no âmbito da Unidade Curricular Introdução a Modelos Dinâmicosdo 2º ano da Licenciatura em Ciência de Dados do Instituto Universitário de Lisboa ISCTE. }\\
+  {\large Trabalho realizado no âmbito da Unidade Curricular Introdução a Modelos Dinâmicos do 2º ano em 2022/2023 da Licenciatura em Ciência de Dados}\\
 	\vspace{12pt}
 	\rule{\linewidth}{2pt}\\
 	\vspace{20pt} 
@@ -73,11 +73,12 @@
   <agsos@iscte-iul.pt> \\
   Rui Chaves, 104914 \\
   <rfpcs1@iscte-iul.pt>
-  \vspace{20pt}
+  \vspace{30pt}
 }
-\date{21/12/2022 \\ Versão 0.0.2} % 
+\date{21/12/2022 \\ Versão 1.0.0} % 
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
+\thispagestyle{empty}
 \maketitle
 \pagebreak
 
@@ -501,13 +502,13 @@ O gráfico de correlações não mostra também nenhuma correlação significant
 \hline
 isHotel & isPrivateRoom & isSharedRoom & n & freq & averagePrice\\
 \hline
-\cellcolor{gray!6}{0} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{4242} & \cellcolor{gray!6}{0.4439096} & \cellcolor{gray!6}{283.3628}\\
+\cellcolor{gray!6}{0} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{4242} & \cellcolor{gray!6}{0.4439096} & \cellcolor{gray!6}{268.9505}\\
 \hline
-0 & 0 & 1 & 1539 & 0.1610506 & 236.9493\\
+0 & 0 & 1 & 1539 & 0.1610506 & 210.5952\\
 \hline
-\cellcolor{gray!6}{0} & \cellcolor{gray!6}{1} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{2236} & \cellcolor{gray!6}{0.2339891} & \cellcolor{gray!6}{367.8690}\\
+\cellcolor{gray!6}{0} & \cellcolor{gray!6}{1} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{2236} & \cellcolor{gray!6}{0.2339891} & \cellcolor{gray!6}{387.0130}\\
 \hline
-1 & 0 & 0 & 1539 & 0.1610506 & 274.2014\\
+1 & 0 & 0 & 1539 & 0.1610506 & 275.7479\\
 \hline
 \end{tabular}
 \endgroup{}
@@ -560,17 +561,17 @@ O nosso primeiro modelo linear foi um modelo que diretamente relaciona as variá
 \hline
 Model & fit0(price \textasciitilde{} .)\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.0432}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.0528}\\
 \hline
 AIC & 1.61e+05\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{1.8}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{1.78}\\
 \hline
-rRMSE & 0.039\\
+rRMSE & 0.0397\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 2.81e-46}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 5.18e-68}\\
 \hline
-Breusch-Godfrey & p > 0.05\\
+Breusch-Godfrey & p = 0.0255\\
 \hline
 \cellcolor{gray!6}{Jarque-Bera} & \cellcolor{gray!6}{p < 0.05}\\
 \hline
@@ -616,15 +617,15 @@ O primeiro modelo notavelmente não é apropriado, devido ao valor gigante de \t
 \hline
 Model & cube & squared & root & log & invSqrt & inv & invSqdr & invCube\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.031} & \cellcolor{gray!6}{0.0338} & \cellcolor{gray!6}{0.126} & \cellcolor{gray!6}{0.372} & \cellcolor{gray!6}{0.524} & \cellcolor{gray!6}{0.585} & \cellcolor{gray!6}{0.59} & \cellcolor{gray!6}{0.548}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.0417} & \cellcolor{gray!6}{0.0448} & \cellcolor{gray!6}{0.136} & \cellcolor{gray!6}{0.382} & \cellcolor{gray!6}{0.53} & \cellcolor{gray!6}{0.592} & \cellcolor{gray!6}{0.6} & \cellcolor{gray!6}{0.559}\\
 \hline
-AIC & 5.4e+05 & 3.49e+05 & 6.98e+04 & 1.98e+04 & -4.42e+04 & -7.54e+04 & -1.41e+05 & -2.06e+05\\
+AIC & 5.39e+05 & 3.49e+05 & 6.93e+04 & 1.93e+04 & -4.45e+04 & -7.58e+04 & -1.42e+05 & -2.06e+05\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{127032} & \cellcolor{gray!6}{320} & \cellcolor{gray!6}{0.289} & \cellcolor{gray!6}{0.0905} & \cellcolor{gray!6}{0.304} & \cellcolor{gray!6}{1.56} & \cellcolor{gray!6}{213} & \cellcolor{gray!6}{67374}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{143041} & \cellcolor{gray!6}{349} & \cellcolor{gray!6}{0.283} & \cellcolor{gray!6}{0.0886} & \cellcolor{gray!6}{0.293} & \cellcolor{gray!6}{1.47} & \cellcolor{gray!6}{200} & \cellcolor{gray!6}{64201}\\
 \hline
-rRMSE & 0.196 & 0.153 & 0.00679 & 0.00137 & 0.00281 & 0.00544 & 0.0119 & 0.019\\
+rRMSE & 0.185 & 0.153 & 0.00665 & 0.00134 & 0.00277 & 0.00538 & 0.0119 & 0.0194\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 2.35e-28} & \cellcolor{gray!6}{p = 5.42e-36} & \cellcolor{gray!6}{p = 8.46e-57} & \cellcolor{gray!6}{p = 9.54e-116} & \cellcolor{gray!6}{p = 4.08e-242} & \cellcolor{gray!6}{p = 9.43e-296} & \cellcolor{gray!6}{p = 0} & \cellcolor{gray!6}{p = 0}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 8.28e-36} & \cellcolor{gray!6}{p = 4.2e-53} & \cellcolor{gray!6}{p = 1.87e-74} & \cellcolor{gray!6}{p = 2.28e-110} & \cellcolor{gray!6}{p = 4.52e-221} & \cellcolor{gray!6}{p = 4.05e-292} & \cellcolor{gray!6}{p = 0} & \cellcolor{gray!6}{p = 0}\\
 \hline
 Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05\\
 \hline
@@ -669,17 +670,17 @@ O conjunto de treino usou o mesmo método de \textit{oversampling} usado anterio
 \hline
 Model & log & invSqrt & logOut & invSqrtOut\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.372} & \cellcolor{gray!6}{0.524} & \cellcolor{gray!6}{0.413} & \cellcolor{gray!6}{0.533}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.382} & \cellcolor{gray!6}{0.53} & \cellcolor{gray!6}{0.421} & \cellcolor{gray!6}{0.536}\\
 \hline
-AIC & 1.98e+04 & -4.42e+04 & 1.55e+04 & -3.84e+04\\
+AIC & 1.93e+04 & -4.45e+04 & 1.52e+04 & -3.86e+04\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0905} & \cellcolor{gray!6}{0.304} & \cellcolor{gray!6}{0.0917} & \cellcolor{gray!6}{0.293}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0886} & \cellcolor{gray!6}{0.293} & \cellcolor{gray!6}{0.0912} & \cellcolor{gray!6}{0.29}\\
 \hline
-rRMSE & 0.00137 & 0.00281 & 0.00352 & 0.00765\\
+rRMSE & 0.00134 & 0.00277 & 0.00349 & 0.00757\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 9.54e-116} & \cellcolor{gray!6}{p = 4.08e-242} & \cellcolor{gray!6}{p = 3.41e-90} & \cellcolor{gray!6}{p = 2.05e-230}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 2.28e-110} & \cellcolor{gray!6}{p = 4.52e-221} & \cellcolor{gray!6}{p = 1.12e-89} & \cellcolor{gray!6}{p = 2.19e-223}\\
 \hline
-Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05\\
+Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05 & p = 0.0204\\
 \hline
 \cellcolor{gray!6}{Jarque-Bera} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05}\\
 \hline
@@ -730,15 +731,15 @@ Ao analisar os gráficos, apenas o gráfico dos resíduos parcial da variável \
 \hline
 Model & noMN & withMN & MNsq\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.353} & \cellcolor{gray!6}{0.372} & \cellcolor{gray!6}{0.412}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.359} & \cellcolor{gray!6}{0.382} & \cellcolor{gray!6}{0.421}\\
 \hline
-AIC & 2.01e+04 & 1.98e+04 & 1.92e+04\\
+AIC & 1.96e+04 & 1.93e+04 & 1.86e+04\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0931} & \cellcolor{gray!6}{0.0905} & \cellcolor{gray!6}{0.0859}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0913} & \cellcolor{gray!6}{0.0886} & \cellcolor{gray!6}{0.0841}\\
 \hline
-rRMSE & 0.00139 & 0.00137 & 0.00133\\
+rRMSE & 0.00136 & 0.00134 & 0.00129\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 2.21e-120} & \cellcolor{gray!6}{p = 9.54e-116} & \cellcolor{gray!6}{p = 2.01e-117}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 1.97e-123} & \cellcolor{gray!6}{p = 2.28e-110} & \cellcolor{gray!6}{p = 2.82e-112}\\
 \hline
 Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05\\
 \hline
@@ -778,15 +779,15 @@ De forma a resolver a heterocedasticidade, vamos usar o método de \textit{weigh
 \hline
 Model & noW & sqdrN & rootN & rootPred & sqdrPred\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.412} & \cellcolor{gray!6}{0.976} & \cellcolor{gray!6}{0.371} & \cellcolor{gray!6}{0.419} & \cellcolor{gray!6}{0.444}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.421} & \cellcolor{gray!6}{0.824} & \cellcolor{gray!6}{0.363} & \cellcolor{gray!6}{0.43} & \cellcolor{gray!6}{0.457}\\
 \hline
-AIC & 1.92e+04 & 6.03e+04 & 2.01e+04 & 1.92e+04 & 1.95e+04\\
+AIC & 1.86e+04 & 6.08e+04 & 1.95e+04 & 1.87e+04 & 1.89e+04\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0859} & \cellcolor{gray!6}{0.137} & \cellcolor{gray!6}{0.0879} & \cellcolor{gray!6}{0.0859} & \cellcolor{gray!6}{0.0863}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0841} & \cellcolor{gray!6}{0.128} & \cellcolor{gray!6}{0.0863} & \cellcolor{gray!6}{0.084} & \cellcolor{gray!6}{0.0843}\\
 \hline
-rRMSE & 0.00133 & 0.00194 & 0.00134 & 0.00133 & 0.00133\\
+rRMSE & 0.00129 & 0.00197 & 0.00131 & 0.00129 & 0.0013\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 2.01e-117} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p = 5.11e-60} & \cellcolor{gray!6}{p > 0.05}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 2.82e-112} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p = 1.51e-56} & \cellcolor{gray!6}{p > 0.05}\\
 \hline
 Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05\\
 \hline
@@ -842,13 +843,13 @@ O gráfico de resíduos não mostra tendência, nem heterocedasticidade evidente
 \hline
 Model & sqdrN & sqdrNOut & rootN & rootNOut & sqdrPred & sqdrPredOut\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.976} & \cellcolor{gray!6}{0.964} & \cellcolor{gray!6}{0.371} & \cellcolor{gray!6}{0.408} & \cellcolor{gray!6}{0.444} & \cellcolor{gray!6}{0.511}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.824} & \cellcolor{gray!6}{0.803} & \cellcolor{gray!6}{0.363} & \cellcolor{gray!6}{0.419} & \cellcolor{gray!6}{0.457} & \cellcolor{gray!6}{0.511}\\
 \hline
-AIC & 6.03e+04 & 4.65e+04 & 2.01e+04 & 1.59e+04 & 1.95e+04 & 1.48e+04\\
+AIC & 6.08e+04 & 5.49e+04 & 1.95e+04 & 1.58e+04 & 1.89e+04 & 1.46e+04\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.137} & \cellcolor{gray!6}{0.112} & \cellcolor{gray!6}{0.0879} & \cellcolor{gray!6}{0.0839} & \cellcolor{gray!6}{0.0863} & \cellcolor{gray!6}{0.0858}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.128} & \cellcolor{gray!6}{0.0986} & \cellcolor{gray!6}{0.0863} & \cellcolor{gray!6}{0.0836} & \cellcolor{gray!6}{0.0843} & \cellcolor{gray!6}{0.0855}\\
 \hline
-rRMSE & 0.00194 & 0.00411 & 0.00134 & 0.0033 & 0.00133 & 0.00337\\
+rRMSE & 0.00197 & 0.0038 & 0.00131 & 0.00328 & 0.0013 & 0.00335\\
 \hline
 \cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05}\\
 \hline
@@ -882,97 +883,97 @@ Os coeficientes do modelo são apresentados na tabela seguinte.\\
 \hline
 term & estimate & std.error & statistic & p.value\\
 \hline
-\cellcolor{gray!6}{(Intercept)} & \cellcolor{gray!6}{4.01e+02} & \cellcolor{gray!6}{144.057} & \cellcolor{gray!6}{2.782} & \cellcolor{gray!6}{5.42e-03}\\
+\cellcolor{gray!6}{(Intercept)} & \cellcolor{gray!6}{1.42e+02} & \cellcolor{gray!6}{137.990} & \cellcolor{gray!6}{1.027} & \cellcolor{gray!6}{3.05e-01}\\
 \hline
-latitude & 1.21e+01 & 1.370 & 8.812 & 1.45e-18\\
+latitude & 1.28e+01 & 1.349 & 9.464 & 3.67e-21\\
 \hline
-\cellcolor{gray!6}{longitude} & \cellcolor{gray!6}{6.95e+00} & \cellcolor{gray!6}{1.017} & \cellcolor{gray!6}{6.833} & \cellcolor{gray!6}{8.81e-12}\\
+\cellcolor{gray!6}{longitude} & \cellcolor{gray!6}{5.05e+00} & \cellcolor{gray!6}{0.972} & \cellcolor{gray!6}{5.190} & \cellcolor{gray!6}{2.14e-07}\\
 \hline
-minimum\_nights & -1.87e-02 & 0.001 & -35.046 & 3.55e-253\\
+minimum\_nights & -1.70e-02 & 0.001 & -33.051 & 7.40e-227\\
 \hline
-\cellcolor{gray!6}{number\_of\_reviews} & \cellcolor{gray!6}{-1.26e-03} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{-16.234} & \cellcolor{gray!6}{1.77e-58}\\
+\cellcolor{gray!6}{number\_of\_reviews} & \cellcolor{gray!6}{-1.25e-03} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{-16.457} & \cellcolor{gray!6}{5.00e-60}\\
 \hline
-calculated\_host\_listings\_count & -3.71e-03 & 0.000 & -16.089 & 1.75e-57\\
+calculated\_host\_listings\_count & -2.75e-03 & 0.000 & -12.353 & 8.71e-35\\
 \hline
-\cellcolor{gray!6}{availability\_365} & \cellcolor{gray!6}{-9.99e-05} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{-1.904} & \cellcolor{gray!6}{5.69e-02}\\
+\cellcolor{gray!6}{availability\_365} & \cellcolor{gray!6}{-2.09e-04} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{-4.093} & \cellcolor{gray!6}{4.29e-05}\\
 \hline
-neighbourhood\_Bernal.Heights & 3.45e-01 & 0.066 & 5.232 & 1.72e-07\\
+neighbourhood\_Bernal.Heights & 1.42e-01 & 0.066 & 2.147 & 3.18e-02\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Castro.Upper.Market} & \cellcolor{gray!6}{5.02e-01} & \cellcolor{gray!6}{0.091} & \cellcolor{gray!6}{5.540} & \cellcolor{gray!6}{3.11e-08}\\
+\cellcolor{gray!6}{neighbourhood\_Castro.Upper.Market} & \cellcolor{gray!6}{2.54e-01} & \cellcolor{gray!6}{0.087} & \cellcolor{gray!6}{2.911} & \cellcolor{gray!6}{3.61e-03}\\
 \hline
-neighbourhood\_Chinatown & -3.32e-01 & 0.111 & -2.979 & 2.90e-03\\
+neighbourhood\_Chinatown & -6.21e-01 & 0.110 & -5.621 & 1.95e-08\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Crocker.Amazon} & \cellcolor{gray!6}{5.77e-01} & \cellcolor{gray!6}{0.099} & \cellcolor{gray!6}{5.809} & \cellcolor{gray!6}{6.48e-09}\\
+\cellcolor{gray!6}{neighbourhood\_Crocker.Amazon} & \cellcolor{gray!6}{2.93e-01} & \cellcolor{gray!6}{0.094} & \cellcolor{gray!6}{3.114} & \cellcolor{gray!6}{1.85e-03}\\
 \hline
-neighbourhood\_Diamond.Heights & 8.49e-01 & 0.223 & 3.815 & 1.37e-04\\
+neighbourhood\_Diamond.Heights & 6.69e-01 & 0.182 & 3.680 & 2.35e-04\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Downtown.Civic.Center} & \cellcolor{gray!6}{-1.78e-01} & \cellcolor{gray!6}{0.097} & \cellcolor{gray!6}{-1.823} & \cellcolor{gray!6}{6.84e-02}\\
+\cellcolor{gray!6}{neighbourhood\_Downtown.Civic.Center} & \cellcolor{gray!6}{-4.87e-01} & \cellcolor{gray!6}{0.096} & \cellcolor{gray!6}{-5.097} & \cellcolor{gray!6}{3.53e-07}\\
 \hline
-neighbourhood\_Excelsior & 2.78e-01 & 0.077 & 3.616 & 3.00e-04\\
+neighbourhood\_Excelsior & 9.97e-02 & 0.077 & 1.295 & 1.96e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Financial.District} & \cellcolor{gray!6}{7.43e-03} & \cellcolor{gray!6}{0.104} & \cellcolor{gray!6}{0.071} & \cellcolor{gray!6}{9.43e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Financial.District} & \cellcolor{gray!6}{-1.75e-01} & \cellcolor{gray!6}{0.103} & \cellcolor{gray!6}{-1.706} & \cellcolor{gray!6}{8.81e-02}\\
 \hline
-neighbourhood\_Glen.Park & 3.59e-01 & 0.102 & 3.507 & 4.55e-04\\
+neighbourhood\_Glen.Park & 3.82e-01 & 0.090 & 4.260 & 2.07e-05\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Haight.Ashbury} & \cellcolor{gray!6}{4.48e-01} & \cellcolor{gray!6}{0.102} & \cellcolor{gray!6}{4.391} & \cellcolor{gray!6}{1.14e-05}\\
+\cellcolor{gray!6}{neighbourhood\_Haight.Ashbury} & \cellcolor{gray!6}{1.03e-01} & \cellcolor{gray!6}{0.099} & \cellcolor{gray!6}{1.040} & \cellcolor{gray!6}{2.98e-01}\\
 \hline
-neighbourhood\_Inner.Richmond & 4.26e-01 & 0.131 & 3.247 & 1.17e-03\\
+neighbourhood\_Inner.Richmond & 1.59e-02 & 0.125 & 0.128 & 8.99e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Inner.Sunset} & \cellcolor{gray!6}{5.98e-01} & \cellcolor{gray!6}{0.115} & \cellcolor{gray!6}{5.178} & \cellcolor{gray!6}{2.29e-07}\\
+\cellcolor{gray!6}{neighbourhood\_Inner.Sunset} & \cellcolor{gray!6}{2.56e-01} & \cellcolor{gray!6}{0.110} & \cellcolor{gray!6}{2.339} & \cellcolor{gray!6}{1.93e-02}\\
 \hline
-neighbourhood\_Lakeshore & 8.95e-01 & 0.119 & 7.502 & 6.85e-14\\
+neighbourhood\_Lakeshore & 6.04e-01 & 0.115 & 5.267 & 1.41e-07\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Marina} & \cellcolor{gray!6}{1.23e-02} & \cellcolor{gray!6}{0.129} & \cellcolor{gray!6}{0.095} & \cellcolor{gray!6}{9.24e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Marina} & \cellcolor{gray!6}{-2.61e-01} & \cellcolor{gray!6}{0.126} & \cellcolor{gray!6}{-2.074} & \cellcolor{gray!6}{3.81e-02}\\
 \hline
-neighbourhood\_Mission & 2.32e-01 & 0.075 & 3.110 & 1.88e-03\\
+neighbourhood\_Mission & -8.14e-02 & 0.073 & -1.110 & 2.67e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Nob.Hill} & \cellcolor{gray!6}{1.37e-01} & \cellcolor{gray!6}{0.107} & \cellcolor{gray!6}{1.287} & \cellcolor{gray!6}{1.98e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Nob.Hill} & \cellcolor{gray!6}{-1.40e-01} & \cellcolor{gray!6}{0.104} & \cellcolor{gray!6}{-1.343} & \cellcolor{gray!6}{1.79e-01}\\
 \hline
-neighbourhood\_Noe.Valley & 5.26e-01 & 0.082 & 6.396 & 1.67e-10\\
+neighbourhood\_Noe.Valley & 2.45e-01 & 0.079 & 3.121 & 1.81e-03\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_North.Beach} & \cellcolor{gray!6}{1.34e-02} & \cellcolor{gray!6}{0.121} & \cellcolor{gray!6}{0.111} & \cellcolor{gray!6}{9.12e-01}\\
+\cellcolor{gray!6}{neighbourhood\_North.Beach} & \cellcolor{gray!6}{-2.92e-01} & \cellcolor{gray!6}{0.119} & \cellcolor{gray!6}{-2.455} & \cellcolor{gray!6}{1.41e-02}\\
 \hline
-neighbourhood\_Ocean.View & 7.03e-01 & 0.096 & 7.300 & 3.10e-13\\
+neighbourhood\_Ocean.View & 4.21e-01 & 0.093 & 4.511 & 6.54e-06\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Outer.Mission} & \cellcolor{gray!6}{5.47e-01} & \cellcolor{gray!6}{0.089} & \cellcolor{gray!6}{6.180} & \cellcolor{gray!6}{6.67e-10}\\
+\cellcolor{gray!6}{neighbourhood\_Outer.Mission} & \cellcolor{gray!6}{1.57e-01} & \cellcolor{gray!6}{0.085} & \cellcolor{gray!6}{1.856} & \cellcolor{gray!6}{6.36e-02}\\
 \hline
-neighbourhood\_Outer.Richmond & 4.22e-01 & 0.149 & 2.825 & 4.74e-03\\
+neighbourhood\_Outer.Richmond & 2.86e-02 & 0.144 & 0.198 & 8.43e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Outer.Sunset} & \cellcolor{gray!6}{5.47e-01} & \cellcolor{gray!6}{0.132} & \cellcolor{gray!6}{4.152} & \cellcolor{gray!6}{3.33e-05}\\
+\cellcolor{gray!6}{neighbourhood\_Outer.Sunset} & \cellcolor{gray!6}{1.17e-01} & \cellcolor{gray!6}{0.125} & \cellcolor{gray!6}{0.939} & \cellcolor{gray!6}{3.48e-01}\\
 \hline
-neighbourhood\_Pacific.Heights & 2.59e-01 & 0.120 & 2.147 & 3.18e-02\\
+neighbourhood\_Pacific.Heights & -2.30e-01 & 0.117 & -1.967 & 4.92e-02\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Parkside} & \cellcolor{gray!6}{5.72e-01} & \cellcolor{gray!6}{0.124} & \cellcolor{gray!6}{4.614} & \cellcolor{gray!6}{4.00e-06}\\
+\cellcolor{gray!6}{neighbourhood\_Parkside} & \cellcolor{gray!6}{2.25e-01} & \cellcolor{gray!6}{0.119} & \cellcolor{gray!6}{1.885} & \cellcolor{gray!6}{5.95e-02}\\
 \hline
-neighbourhood\_Potrero.Hill & 2.81e-01 & 0.079 & 3.545 & 3.95e-04\\
+neighbourhood\_Potrero.Hill & 4.01e-02 & 0.079 & 0.507 & 6.12e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Presidio} & \cellcolor{gray!6}{6.02e-01} & \cellcolor{gray!6}{0.245} & \cellcolor{gray!6}{2.455} & \cellcolor{gray!6}{1.41e-02}\\
+\cellcolor{gray!6}{neighbourhood\_Presidio} & \cellcolor{gray!6}{2.02e-01} & \cellcolor{gray!6}{0.203} & \cellcolor{gray!6}{0.994} & \cellcolor{gray!6}{3.20e-01}\\
 \hline
-neighbourhood\_Presidio.Heights & 5.27e-02 & 0.154 & 0.342 & 7.32e-01\\
+neighbourhood\_Presidio.Heights & -1.58e-01 & 0.163 & -0.966 & 3.34e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Russian.Hill} & \cellcolor{gray!6}{-5.77e-02} & \cellcolor{gray!6}{0.124} & \cellcolor{gray!6}{-0.464} & \cellcolor{gray!6}{6.43e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Russian.Hill} & \cellcolor{gray!6}{-2.84e-01} & \cellcolor{gray!6}{0.122} & \cellcolor{gray!6}{-2.336} & \cellcolor{gray!6}{1.95e-02}\\
 \hline
-neighbourhood\_Seacliff & 7.58e-01 & 0.234 & 3.244 & 1.18e-03\\
+neighbourhood\_Seacliff & 1.81e-01 & 0.269 & 0.674 & 5.01e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_South.of.Market} & \cellcolor{gray!6}{8.24e-02} & \cellcolor{gray!6}{0.087} & \cellcolor{gray!6}{0.944} & \cellcolor{gray!6}{3.45e-01}\\
+\cellcolor{gray!6}{neighbourhood\_South.of.Market} & \cellcolor{gray!6}{-2.32e-01} & \cellcolor{gray!6}{0.086} & \cellcolor{gray!6}{-2.698} & \cellcolor{gray!6}{6.99e-03}\\
 \hline
-neighbourhood\_Twin.Peaks & 8.00e-01 & 0.127 & 6.277 & 3.61e-10\\
+neighbourhood\_Twin.Peaks & 4.33e-01 & 0.112 & 3.848 & 1.20e-04\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Visitacion.Valley} & \cellcolor{gray!6}{4.22e-01} & \cellcolor{gray!6}{0.097} & \cellcolor{gray!6}{4.350} & \cellcolor{gray!6}{1.38e-05}\\
+\cellcolor{gray!6}{neighbourhood\_Visitacion.Valley} & \cellcolor{gray!6}{2.98e-01} & \cellcolor{gray!6}{0.083} & \cellcolor{gray!6}{3.609} & \cellcolor{gray!6}{3.09e-04}\\
 \hline
-neighbourhood\_West.of.Twin.Peaks & 5.38e-01 & 0.105 & 5.118 & 3.15e-07\\
+neighbourhood\_West.of.Twin.Peaks & 2.58e-01 & 0.098 & 2.647 & 8.14e-03\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Western.Addition} & \cellcolor{gray!6}{3.11e-01} & \cellcolor{gray!6}{0.102} & \cellcolor{gray!6}{3.054} & \cellcolor{gray!6}{2.26e-03}\\
+\cellcolor{gray!6}{neighbourhood\_Western.Addition} & \cellcolor{gray!6}{-7.18e-02} & \cellcolor{gray!6}{0.098} & \cellcolor{gray!6}{-0.732} & \cellcolor{gray!6}{4.64e-01}\\
 \hline
-room\_type\_Hotel.room & -3.04e-01 & 0.025 & -12.271 & 2.34e-34\\
+room\_type\_Hotel.room & -2.48e-01 & 0.024 & -10.192 & 2.88e-24\\
 \hline
-\cellcolor{gray!6}{room\_type\_Private.room} & \cellcolor{gray!6}{-6.03e-01} & \cellcolor{gray!6}{0.020} & \cellcolor{gray!6}{-30.578} & \cellcolor{gray!6}{5.93e-196}\\
+\cellcolor{gray!6}{room\_type\_Private.room} & \cellcolor{gray!6}{-5.69e-01} & \cellcolor{gray!6}{0.019} & \cellcolor{gray!6}{-29.739} & \cellcolor{gray!6}{6.48e-186}\\
 \hline
-room\_type\_Shared.room & -1.14e+00 & 0.027 & -42.913 & 0.00e+00\\
+room\_type\_Shared.room & -1.12e+00 & 0.026 & -43.101 & 0.00e+00\\
 \hline
-\cellcolor{gray!6}{mnsqd} & \cellcolor{gray!6}{6.55e-05} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{30.597} & \cellcolor{gray!6}{3.46e-196}\\
+\cellcolor{gray!6}{mnsqd} & \cellcolor{gray!6}{5.49e-05} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{27.952} & \cellcolor{gray!6}{2.64e-165}\\
 \hline
-mncube & -4.84e-08 & 0.000 & -27.526 & 1.52e-160\\
+mncube & -3.71e-08 & 0.000 & -24.266 & 2.90e-126\\
 \hline
 \end{tabular}
 \endgroup{}
@@ -982,5 +983,5 @@ mncube & -4.84e-08 & 0.000 & -27.526 & 1.52e-160\\
 \normalsize
 
 \bibliography{references}{}
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \end{document}
